Add npm name to web package.json

--- a/web/package.json
+++ b/web/package.json
@@ -1,4 +1,5 @@
 {
+  "name": "mastodon-userid-lookup-web",
   "scripts": {
       "build": "webpack --config webpack.config.js --mode production --display-modules"
   },
